<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/bottom_sheet_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_spacing_8x"
        android:text="@string/bottom_sheet_dialog_fragment_1"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_24x"
        />

    <Button
        android:id="@+id/bottom_sheet_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_spacing_8x"
        android:text="@string/bottom_sheet_dialog_fragment_2"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_24x"
        />

    <Button
        android:id="@+id/bottom_sheet_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_spacing_8x"
        android:text="@string/bottom_sheet_dialog_fragment_3"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_24x"
        />

    <Button
        android:id="@+id/bottom_sheet_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_spacing_8x"
        android:text="@string/bottom_sheet_dialog_fragment_4"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_24x"
        />

    <Button
        android:id="@+id/bottom_sheet_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_spacing_8x"
        android:text="@string/bottom_sheet_dialog_fragment_5"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_24x"
        />
</LinearLayout>